logs/protorpc-standalone.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/protorpc'...
Listing './lib/python3.5/site-packages/protorpc/_google'...
Listing './lib/python3.5/site-packages/protorpc/_google/net'...
Listing './lib/python3.5/site-packages/protorpc/_google/net/proto'...
Compiling './lib/python3.5/site-packages/protorpc/_google/net/proto/ProtocolBuffer.py'...
***   File "./lib/python3.5/site-packages/protorpc/_google/net/proto/ProtocolBuffer.py", line 87
    raise ProtocolBufferDecodeError, '\n\t'.join(dbg)
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/descriptor.py'...
***   File "./lib/python3.5/site-packages/protorpc/descriptor.py", line 605
    except messages.DefinitionNotFoundError, err:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/descriptor_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/descriptor_test.py", line 347
    exec source in result
              ^
SyntaxError: Missing parentheses in call to 'exec'

Compiling './lib/python3.5/site-packages/protorpc/end2end_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/end2end_test.py", line 112
    except remote.ApplicationError, err:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/protorpc/experimental'...
Compiling './lib/python3.5/site-packages/protorpc/messages.py'...
***   File "./lib/python3.5/site-packages/protorpc/messages.py", line 772
    except ValidationError, err:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/messages_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/messages_test.py", line 122
    self.assertEquals(Color.RED, Color(20L))
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/protobuf.py'...
***   File "./lib/python3.5/site-packages/protorpc/protobuf.py", line 354
    except ProtocolBuffer.ProtocolBufferDecodeError, err:
                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/protobuf_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/protobuf_test.py", line 58
    except exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/protojson.py'...
***   File "./lib/python3.5/site-packages/protorpc/protojson.py", line 75
    except ImportError, err:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/protourlencode.py'...
***   File "./lib/python3.5/site-packages/protorpc/protourlencode.py", line 428
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/remote_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/remote_test.py", line 738
    except remote.ApplicationError, err:
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/test_util.py'...
***   File "./lib/python3.5/site-packages/protorpc/test_util.py", line 72
    except exception, err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/transport.py'...
***   File "./lib/python3.5/site-packages/protorpc/transport.py", line 251
    except Exception, decode_err:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/transport_test.py'...
***   File "./lib/python3.5/site-packages/protorpc/transport_test.py", line 271
    except remote.NetworkError, err:
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/protorpc/webapp'...
Compiling './lib/python3.5/site-packages/protorpc/webapp/service_handlers.py'...
***   File "./lib/python3.5/site-packages/protorpc/webapp/service_handlers.py", line 227
    except (messages.ValidationError, messages.DecodeError), err:
                                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/protorpc/webapp_test_util.py'...
***   File "./lib/python3.5/site-packages/protorpc/webapp_test_util.py", line 397
    except urllib2.HTTPError, err:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/protorpc/wsgi'...
Compiling './lib/python3.5/site-packages/protorpc/wsgi/service.py'...
***   File "./lib/python3.5/site-packages/protorpc/wsgi/service.py", line 149
    except (messages.ValidationError, messages.DecodeError), err:
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/protorpc_standalone-0.9.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
